<resources>
    <string name="app_name">Flashcards</string>
    <string name="btn_add">Add</string>
    <string name="lbl_count">Count</string>
    <string name="btn_back">Back</string>
    <string name="lbl_view_title">View</string>
    <string name="btn_edit">Edit</string>
    <string name="lbl_edit_title">Edit</string>
    <string name="lbl_eng">English</string>
    <string name="lbl_jpn">Japanese</string>
    <string name="lbl_done">Done</string>
    <string name="btn_done">Done</string>
    <string name="btn_undone">Not sure</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_save">Save</string>
    <string name="msg_error">An error occurred</string>
    <string name="msg_saved">Data saved</string>
    <string name="msg_deleted">Deleted</string>
    <string name="lbl_add_title">Add</string>
    <string name="msg_confirm_delete">Are you sure to delete?</string>
    <string name="msg_add_word">Would you like to add a new word?</string>
</resources>