<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WordViewActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lbl_eng"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/lbl_eng"
                app:layout_constraintTop_toTopOf="@id/row1"
                app:layout_constraintBottom_toTopOf="@id/row2"
                app:layout_constraintStart_toStartOf="@id/col1"
                />

            <TextView
                android:id="@+id/txtEng"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/textview_background"
                android:text="ENGLISH"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintTop_toTopOf="@id/row1"
                app:layout_constraintBottom_toTopOf="@id/row2"
                app:layout_constraintStart_toStartOf="@id/col2"
                app:layout_constraintEnd_toStartOf="@id/col3"
                />

            <TextView
                android:id="@+id/lbl_jpn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_jpn"
                app:layout_constraintTop_toTopOf="@id/row2"
                app:layout_constraintBottom_toTopOf="@id/row3"
                app:layout_constraintStart_toStartOf="@id/col1"
                />

            <TextView
                android:id="@+id/txtJpn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/textview_background"
                android:text="日本語です"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintTop_toTopOf="@id/row2"
                app:layout_constraintBottom_toTopOf="@id/row3"
                app:layout_constraintStart_toStartOf="@id/col2"
                app:layout_constraintEnd_toStartOf="@id/col3"
                />

            <TextView
                android:id="@+id/lbl_done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_done"
                app:layout_constraintTop_toTopOf="@id/row3"
                app:layout_constraintBottom_toTopOf="@id/row4"
                app:layout_constraintStart_toStartOf="@id/col1"
                />

            <TextView
                android:id="@+id/txtDone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="✔"
                android:textColor="@color/green"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintTop_toTopOf="@id/row3"
                app:layout_constraintBottom_toTopOf="@id/row4"
                app:layout_constraintStart_toStartOf="@id/col2"
                />

            <Button
                android:id="@+id/btnDone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_done"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintTop_toTopOf="@id/row4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btnUndone"
                />

            <Button
                android:id="@+id/btnUndone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_undone"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintTop_toTopOf="@id/row4"
                app:layout_constraintStart_toEndOf="@id/btnDone"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <Space
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:layout_constraintTop_toBottomOf="@id/btnDone"
                />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/col1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="24dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/col2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.25" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/col3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="24dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/row1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="40dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/row2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="95dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/row3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="150dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/row4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="210dp" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>